Replace get(0)