@@ -91,7 +91,7 @@ class TutorEffortIntegrationTest extends AbstractSpringIntegrationIndependentTes
         TutorEffort effortExpected = createTutorEffortObject(0);
 
         assertThat(tutorEfforts).isNotNull().hasSize(1);
-        assertThat(tutorEfforts.get(0)).usingRecursiveComparison().isEqualTo(effortExpected);
+        assertThat(tutorEfforts.getFirst()).usingRecursiveComparison().isEqualTo(effortExpected);
     }
 
     /**
@@ -110,7 +110,7 @@ class TutorEffortIntegrationTest extends AbstractSpringIntegrationIndependentTes
         TutorEffort effortExpected = createTutorEffortObject(25);
 
         assertThat(tutorEfforts).isNotNull().hasSize(1);
-        assertThat(tutorEfforts.get(0)).usingRecursiveComparison().isEqualTo(effortExpected);
+        assertThat(tutorEfforts.getFirst()).usingRecursiveComparison().isEqualTo(effortExpected);
     }
 
     /**
@@ -129,7 +129,7 @@ class TutorEffortIntegrationTest extends AbstractSpringIntegrationIndependentTes
         TutorEffort effortExpected = createTutorEffortObject(0);
 
         assertThat(tutorEfforts).isNotNull().hasSize(1);
-        assertThat(tutorEfforts.get(0)).usingRecursiveComparison().isEqualTo(effortExpected);
+        assertThat(tutorEfforts.getFirst()).usingRecursiveComparison().isEqualTo(effortExpected);
     }
 
     TutorEffort createTutorEffortObject(int minutes) {
